centjes-gen/test_resources/register/valid/as-is/example.cent
currency USD 0.01

2023-12-17
  | Coffee
  * assets -1 USD
  * expenses 1 USD
