centjes-gen/test_resources/register/error/CONVERT_ERROR_UNKNOWN_TARGET.cent
currency USD 0.01

account assets
account income

2023-12-15
  * assets +1.00 USD
  * income -1.00 USD
